[package]
name = "claws"
version = "0.5.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
description = "AWS command line tool"
keywords = ["aws", "cli", "s3", "ec2"]
repository = "https://github.com/nicholasbishop/claws"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
rusoto_core = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.42", default_features = false, features = ["rustls"] }
structopt = "0.3"
