[package]
name = "claws"
version = "0.7.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
description = "AWS command line tool"
keywords = ["aws", "cli", "cloudwatch", "s3", "ec2"]
repository = "https://github.com/nicholasbishop/claws"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
fehler = "1.0"
rusoto_core = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_logs = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.42", default_features = false, features = ["rustls"] }
structopt = "0.3"
