[package]
name = "claws"
version = "1.0.1"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"
description = "AWS command line tool"
keywords = ["aws", "cli", "cloudwatch", "s3", "ec2"]
categories = ["command-line-utilities"]
repository = "https://github.com/nicholasbishop/claws"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.53", default_features = false, features = ["std"] }
fehler = { version = "1.0.0", default_features = false }
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_logs = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.47.0", default_features = false, features = ["rustls"] }
structopt = { version = "0.3.26", default_features = false }
